<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.information.InformationActivity">

    <EditText
        android:id="@+id/editPlayerName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/player_name_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#00838F"
        app:layout_constraintBaseline_toBaselineOf="@+id/playerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerName" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/player_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewExplanation" />

    <TextView
        android:id="@+id/playerId"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/player_id"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/renewIdButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPlayerName" />

    <TextView
        android:id="@+id/guessedWords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/player_guessedWords"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save" />

    <TextView
        android:id="@+id/viewExplanation"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="explanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPlayerId"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/player_id_hint"
        android:importantForAutofill="no"
        android:inputType="none"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerId" />

    <EditText
        android:id="@+id/editStatisticGuessedWords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/statistic_default_value"
        android:importantForAutofill="no"
        android:inputType="none"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBaseline_toBaselineOf="@+id/guessedWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guessedWords" />

    <ImageButton
        android:id="@+id/renewIdButton"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/player_id_renew"
        app:layout_constraintBottom_toTopOf="@+id/editPlayerId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerId"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/information_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPlayerId" />
</androidx.constraintlayout.widget.ConstraintLayout>